dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_value-5.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: \"test\""
expression: val
---
[
    [
        Text(
            "test",
        ),
    ],
]
