dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_value-6.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: x\"1240\""
expression: val
---
[
    [
        Blob(
            [
                18,
                64,
            ],
        ),
    ],
]
