dsl/parser/snapshots/dsl_parser__sqlite_values__tests__single_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: Null"
expression: val
---
[
    [
        Null,
    ],
]
