dsl/parser/snapshots/dsl_parser__sqlite_values__tests__text_value-4.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: \"test\n\""
expression: val
---
Text(
    "test\n",
)
