dsl/parser/snapshots/dsl_parser__sqlite_values__tests__text_value-5.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: \"[\\\"hat\\\",\\\"cap\\\",\\\"shirt\\\",\\\"sweater\\\",\\\"sweatshirt\\\",\\\"shorts\\\",\\\"jeans\\\",\\\"sneakers\\\",\\\"boots\\\",\\\"coat\\\",\\\"accessories\\\"]\""
expression: val
---
Text(
    "[\"hat\",\"cap\",\"shirt\",\"sweater\",\"sweatshirt\",\"shorts\",\"jeans\",\"sneakers\",\"boots\",\"coat\",\"accessories\"]",
)
