dsl/parser/snapshots/dsl_parser__sqlite_values__tests__text_value.snap
---
source: dsl/parser/sqlite_values.rs
description: "input: \"true\""
expression: val
---
Text(
    "true",
)
